# VOLO

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  pnpm-workspace.yaml  pyproject.toml  turbo.json
.githooks/: README.md  pre-commit
.github/actions/volo-pr-check/: action.yml
.github/workflows/: ci.yml  volo-pr-reliability.yml  volo-selfcheck.yml
apps/vscode/: .gitignore  README.md  package.json  tsconfig.json
apps/vscode/src/: extension.ts  trajectory.test.ts  trajectory.ts  webview.ts
apps/web/: .eslintrc.json  .npmrc  .prettierignore  Dockerfile  README.md  next.config.ts  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/ci/: page.tsx
apps/web/app/diff/: page.tsx
apps/web/app/runs/: page.tsx
apps/web/app/scenarios/: page.tsx
apps/web/app/shadow/: page.tsx
apps/web/components/: ActivityThread.tsx  BentoGrid.tsx  CISection.tsx  CTA.tsx  CaseStudy.tsx  Comparison.tsx  DiffView.tsx  Footer.tsx  Hero.tsx  MetricsExplainer.tsx  NotesGrid.tsx  PageHeader.tsx  ProviderStrip.tsx  QueryProvider.tsx  ReliabilityHeatmap.tsx  ReliabilityHeatmapVisx.tsx  ReliabilityPanel.tsx  ReliabilitySurface3D.tsx  RepeatedHeadline.tsx  ScenariosWall.tsx  Sparkline.tsx  StatsBar.tsx  StatusDot.tsx  StatusStrip.tsx  TerminalDemo.tsx  Testimonials.tsx  TopNav.tsx  TrajectoryCanvas.tsx  TrajectoryList.tsx  ValueStrip.tsx  VerdictBanner.tsx
apps/web/components/motion/: AuroraBackdrop.tsx  CountUp.tsx  CursorHalo.tsx  LetterStagger.tsx  Magnetic.tsx  MagneticButton.tsx  Marquee.tsx  MouseSpotlight.tsx  Reveal.tsx  ScrollProgress.tsx  SmoothScroll.tsx  TextScramble.tsx  Tilt.tsx
apps/web/components/ui/: Button.tsx  Card.tsx  Dialog.tsx
apps/web/lib/: api.ts  ci.ts  cn.ts  shadow.ts
apps/web/tests/: StatusDot.test.tsx  setup.ts
apps/web/tests/e2e/: landing.spec.ts
benchmarks/: README.md  fidelity.py  leaderboard.html  leaderboard.json  leaderboard.md  leaderboard.py  replay_throughput.py  results.json
cloud/: LICENSE  pyproject.toml
cloud/deploy/: .dockerignore  Dockerfile.api  Dockerfile.worker  README.md  fly.toml
cloud/src/volo_cloud/: __init__.py  app.py  audit.py  models.py  rbac.py  service.py  sim.py  sim_service.py  worker.py
cloud/tests/: test_cloud.py  test_jwt_exp_required.py  test_rbac.py  test_rs256_sso.py  test_sim.py
docs/: ARCHITECTURE.md  DEPLOY.md  GLOSSARY.md  ROADMAP.md  demo.tape
docs/adr/: 0000-template.md  0001-language-and-runtimes.md  0002-monorepo-tooling.md  0003-recording-format-v1.md  0004-active-recorder-proxy-capture.md  0005-scenario-operator-taxonomy.md  0006-reliability-metrics.md  0007-step-level-diff-algorithm.md  0008-naming-volo.md  0009-tier2-simulator-algorithm.md  0010-fidelity-benchmark-methodology.md  0011-free-openai-compat-judge.md  0012-security-trust-boundaries.md  0013-deployment-and-observability.md  0014-mcp-simulation.md  0015-mcp-fuzz-and-conformance.md  0016-pytest-plugin.md  0017-shadow-corpus-and-drift.md  0018-shadow-trend-history.md  0019-redteam-canary-safety-annex.md  0020-migration-lab.md  0021-simulated-users-counterparties.md  0022-long-horizon-rig.md  0023-recording-format-v2-and-perf.md  0024-pack-format.md  0025-pack-registry.md  0026-framework-adapters-v2.md  0027-reliability-leaderboard.md  0028-pack-signing.md  0029-compliance-evidence-packs.md  0030-pr-check-action.md  0031-cloud-control-plane.md  0032-vscode-extension.md  0033-hosted-sim-minutes.md  0034-computer-use-record-replay.md  0035-rbac-sso-audit.md  0036-multi-agent-testing.md  0037-volo-certified.md  0038-v5-capstone.md
examples/: clarifying_agent.py  drifting_agent.py  flaky_agent.py  mcp_calc_server.py  orchestrator_agent.py  vulnerable_agent.py
examples/calc_agent/: __init__.py  agent.py
examples/calc_agent_v2/: __init__.py  agent.py
examples/echo_agent/: __init__.py  agent.py
examples/research_agent/: __init__.py  agent.py  tools.json
examples/workflows/: volo-leaderboard.yml  volo-nightly.yml  volo-pr-check.yml
integrations/autogen/: pyproject.toml
integrations/autogen/src/volo_autogen/: __init__.py
integrations/autogen/tests/: test_autogen_wrap.py
integrations/crewai/: pyproject.toml
integrations/crewai/src/volo_crewai/: __init__.py
integrations/crewai/tests/: test_crewai_wrap.py
integrations/langgraph/: pyproject.toml
integrations/langgraph/src/volo_langgraph/: __init__.py  adapter.py  otel.py
integrations/langgraph/tests/: test_langgraph_wrap.py
integrations/openai_agents/: pyproject.toml
integrations/openai_agents/tests/: test_openai_agents_wrap.py
integrations/pydantic_ai/: pyproject.toml
integrations/pydantic_ai/src/volo_pydantic_ai/: __init__.py
integrations/pydantic_ai/tests/: test_pydantic_ai_wrap.py
integrations/semantic_kernel/: pyproject.toml
integrations/semantic_kernel/src/volo_semantic_kernel/: __init__.py
integrations/semantic_kernel/tests/: test_semantic_kernel_wrap.py
registry/: README.md  index.json  volo-personas-builtin@1.0.0.json  volo-redteam-builtin@1.0.0.json  volo-scenarios-builtin@1.0.0.json
services/api/: Dockerfile  README.md  pyproject.toml
services/api/src/volo_api/: __init__.py  auth.py  main.py  observability.py  streaming.py
services/api/tests/: test_api.py  test_observability.py  test_security.py  test_shadow_endpoints.py  test_streaming_and_projects.py
tests/: test_calc_agent.py  test_full_pipeline_v5.py  test_golden_schemas.py  test_leaderboard.py  test_replay_throughput.py  test_research_agent.py  test_research_agent_fidelity.py  test_runner_e2e.py  test_workspace_imports.py
tests/golden/: recording_v1_canonical.json
website/: README.md  certify.mdx  ci.mdx  cli.mdx  compliance.mdx  computeruse.mdx  concepts.mdx  docs.json  fidelity.mdx  horizon.mdx  index.mdx  integrations.mdx  leaderboard.mdx  mcp.mdx  migrate.mdx  multiagent.mdx  packs.mdx  personas.mdx  pr-check.mdx  pytest.mdx  quickstart.mdx  redteam.mdx  shadow.mdx
(+3 files in other folders)
