[project]
name = "volo-workspace"
version = "0.0.0"
description = "Volo — a flight simulator for AI agents (monorepo root, not published)"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*", "services/api", "cloud", "integrations/langgraph", "integrations/openai_agents", "integrations/crewai", "integrations/autogen", "integrations/pydantic_ai", "integrations/semantic_kernel"]

[tool.uv.sources]
volo-core           = { workspace = true }
volo-sdk            = { workspace = true }
volo-simulator      = { workspace = true }
volo-scenarios      = { workspace = true }
volo-reliability    = { workspace = true }
volo-runner         = { workspace = true }
volo-diff           = { workspace = true }
volo-models         = { workspace = true }
volo-mcp            = { workspace = true }
volo-shadow         = { workspace = true }
volo-redteam        = { workspace = true }
volo-migrate        = { workspace = true }
volo-personas       = { workspace = true }
volo-longhorizon    = { workspace = true }
volo-packs          = { workspace = true }
volo-compliance     = { workspace = true }
volo-computeruse    = { workspace = true }
volo-multiagent     = { workspace = true }
volo-certify        = { workspace = true }
volo-cli            = { workspace = true }
pytest-volo         = { workspace = true }
volo-api            = { workspace = true }
volo-cloud          = { workspace = true }
volo-langgraph      = { workspace = true }
volo-openai-agents  = { workspace = true }
volo-crewai         = { workspace = true }
volo-autogen        = { workspace = true }
volo-pydantic-ai    = { workspace = true }
volo-semantic-kernel = { workspace = true }

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "httpx2>=2.5",          # Starlette/FastAPI TestClient (httpx successor; silences the depr warning)
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["packages/*/src", "services/api/src", "examples", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = [
  "E501",   # line length handled by formatter
  "B008",   # FastAPI's Depends/Query/Body intentionally use call-in-default; this is the sanctioned pattern.
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
# Whole-monorepo strict typing. Every workspace package ships a `py.typed` marker so
# cross-package imports resolve as typed (ADR-0012 hardening pass / M9).
files = [
    "packages/volo-core/src",
    "packages/volo-sdk/src",
    "packages/volo-models/src",
    "packages/volo-scenarios/src",
    "packages/volo-reliability/src",
    "packages/volo-simulator/src",
    "packages/volo-diff/src",
    "packages/volo-mcp/src",
    "packages/volo-runner/src",
    "packages/volo-shadow/src",
    "packages/volo-redteam/src",
    "packages/volo-migrate/src",
    "packages/volo-personas/src",
    "packages/volo-longhorizon/src",
    "packages/volo-packs/src",
    "packages/volo-compliance/src",
    "packages/volo-computeruse/src",
    "packages/volo-multiagent/src",
    "packages/volo-certify/src",
    "packages/pytest-volo/src",
    "packages/volo-cli/src",
    "services/api/src",
    "cloud/src",
]

[tool.pytest.ini_options]
minversion = "8.0"
# -p pytester: enables the pytester fixture used by packages/pytest-volo's own tests
# (pytest forbids `pytest_plugins` in non-root conftests, so it must be enabled here).
addopts = "-ra --strict-markers -p pytester"
testpaths = ["packages", "services", "cloud", "integrations", "tests"]
# All workspace packages get installed editable via `uv sync --all-packages`, so they're already
# importable. We add the repo root so `import examples.echo_agent` resolves without install.
pythonpath = ["."]
