[project]
name = "volo-langgraph"
version = "0.1.0"
description = "Volo integration for LangGraph — wrap a graph + import LangGraph OTel traces."
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
  "volo-core",
  "volo-sdk",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/volo_langgraph"]
