[project]
name = "volo-pydantic-ai"
version = "0.1.0"
description = "Volo integration for Pydantic AI."
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
  "volo-core",
  "volo-sdk",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/volo_pydantic_ai"]
