[project]
name = "volo-semantic-kernel"
version = "0.1.0"
description = "Volo integration for Semantic Kernel."
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
  "volo-core",
  "volo-sdk",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/volo_semantic_kernel"]
