[project]
name = "volo-api"
version = "0.1.0"
description = "Volo FastAPI service — read-only over local recordings + reports."
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
  "volo-core",
  "volo-reliability",
  "volo-diff",
  "volo-scenarios",
  "volo-shadow",
  "fastapi>=0.115",
  "sqlmodel>=0.0.21",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
serve = ["uvicorn[standard]>=0.30"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/volo_api"]
